modules/disaster-recovery/velero/resources/Deployment--velero.yaml
---
# Source: velero/charts/velero/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: velero
  labels:
    app.kubernetes.io/name: velero
    app.kubernetes.io/instance: velero
    component: velero
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: velero
      app.kubernetes.io/name: velero
  template:
    metadata:
      labels:
        name: velero
        app.kubernetes.io/name: velero
        app.kubernetes.io/instance: velero
    spec:
      restartPolicy: Always
      serviceAccountName: velero-server
      containers:
        - name: velero
          image: "velero/velero:v1.9.1"
          imagePullPolicy: IfNotPresent
          command:
            - /velero
          args:
            - server
          resources:
            limits:
              cpu: 150m
              memory: 350Mi
            requests:
              cpu: 150m
              memory: 200Mi
          volumeMounts:
            - name: plugins
              mountPath: /plugins
            - name: cloud-credentials
              mountPath: /credentials
            - name: scratch
              mountPath: /scratch
      dnsPolicy: ClusterFirst
      volumes:
        - name: cloud-credentials
          secret:
            secretName: dr-bucket-credentials
        - name: plugins
          emptyDir: {}
        - name: scratch
          emptyDir: {}
