modules/disaster-recovery/velero/resources/NetworkPolicy--allow-external-egress.yaml
---
# Source: velero/templates/network-policies/allow-external-egress.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-external-egress
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
      - ipBlock:
          cidr: 0.0.0.0/0
