modules/disaster-recovery/velero/resources/NetworkPolicy--deny-all.yaml
---
# Source: velero/templates/network-policies/deny-all.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
  ingress: []
  egress: []
